Library/AXL(Library)/Visual Basic/AXA.bas


'Set the allowed input voltage range in specified multiple input Modules
'==================================================================================================//
' lModuleNo   : Analog Module Number
'
' RTEX AI16F
' Mode -5~+5  : dMinVolt = -5, dMaxVolt = +5
' Mode -10~+10: dMinVolt = -10, dMaxVolt = +10
'==================================================================================================//
Public Declare Function AxaiSetRangeModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Long


'Verify the input voltage range in specified input Module
'==================================================================================================//
' lModuleNo   : Analog Module Number
'
' RTEX AI16F
' *dMinVolt   : -5V, -10V
' *dMaxVolt   : +5V, +10V
'==================================================================================================//
Public Declare Function AxaiGetRangeModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dMinVolt As Double, ByRef dMaxVolt As Double) As Long



'Set the allowed input voltage range in specified multiple input channels
'=================================================================================================='
' AI4RB
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AI16Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaiSetMultiRange Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Long


'Set trigger mode in the specified input module
'=================================================================================================='
' uTriggerMode: NORMAL_MODE(1)
'             : TIMER_MODE(2)
'             : EXTERNAL_MODE(3)
'=================================================================================================='
Public Declare Function AxaiSetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal uTriggerMode As Long) As Long


'Verify trigger mode in the specified input module
'=================================================================================================='
' *upTriggerMode : NORMAL_MODE(1)
'                : TIMER_MODE(2)
'                : EXTERNAL_MODE(3)
'=================================================================================================='
Public Declare Function AxaiGetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upTriggerMode As Long) As Long


'Set offset of specified input module by mVolt (mV) unit. Max -100~100mVolt
'=================================================================================================='
' dMiliVolt      : -100 ~ 100
'=================================================================================================='
Public Declare Function AxaiSetModuleOffsetValue Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dMiliVolt As Double) As Long


'Verify offset value of specified input module. mVolt unit(mV)
'=================================================================================================='
' *dpMiliVolt    : -100 ~ 100
'=================================================================================================='
Public Declare Function AxaiGetModuleOffsetValue Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dpMiliVolt As Double) As Long


'========== Software Timer (Normal Trigger Mode) group =======================================================================================
'Software Trigger Mode API, Convert analog input value to A/D in the specified input channel by user , then return it in voltage value
Public Declare Function AxaiSwReadVoltage Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpVolt As Double) As Long


'Software Trigger Mode API, Return analog input value in digit value to specified input channel
Public Declare Function AxaiSwReadDigit Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upDigit As Long) As Long


'Software Trigger Mode API, Return analog input value in voltage value to specified multiple input channels
Public Declare Function AxaiSwReadMultiVoltage Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByRef dpVolt As Double) As Long


'Software Trigger Mode API, Return analog input value in digit value to specified multiple input channels
Public Declare Function AxaiSwReadMultiDigit Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByRef upDigit As Long) As Long


'========== Hardware Timer (Timer Trigger Mode + External Trigger Mode) group =======================================================================================
'Hardware Trigger Mode API, Set setting value in order to use immediate mode in specified multiple channels
Public Declare Function AxaiHwSetMultiAccess Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByRef lpWordSize As Long) As Long


'Hardware Trigger Mode API, Convert A/D as much as number of specified, then return the voltage value
Public Declare Function AxaiHwStartMultiAccess Lib "AXL.dll" (ByRef dpBuffer As Double) As Long


'Set sampling interval to specified module by frequency unit(Hz)
'=================================================================================================='
' dSampleFreq    : 10 ~ 100000
'=================================================================================================='
Public Declare Function AxaiHwSetSampleFreq Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dSampleFreq As Double) As Long


'Verify the setting value of sampling interval to specified module by frequency unit(Hz)
'=================================================================================================='
' *dpSampleFreq  : 10 ~ 100000
'=================================================================================================='
Public Declare Function AxaiHwGetSampleFreq Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dpSampleFreq As Double) As Long


'Set sampling interval to specified module by time unit (uSec)
'=================================================================================================='
' dSamplePeriod  : 100000 ~ 1000000000
'=================================================================================================='
Public Declare Function AxaiHwSetSamplePeriod Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dSamplePeriod As Double) As Long


'Verify setting value of sampling interval to specified module by time unit(uSec)
'=================================================================================================='
' *dpSamplePeriod : 100000 ~ 1000000000
'=================================================================================================='
Public Declare Function AxaiHwGetSamplePeriod Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef dpSamplePeriod As Double) As Long


'Set control method when the buffer is full in specified input channel
'=================================================================================================='
' uFullMode    : NEW_DATA_KEEP(0)
'              : CURR_DATA_KEEP(1)
'=================================================================================================='
Public Declare Function AxaiHwSetBufferOverflowMode Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uFullMode As Long) As Long


'Verify control method when the buffer is full in specified input channel
'=================================================================================================='
' *upFullMode  : NEW_DATA_KEEP(0)
'              : CURR_DATA_KEEP(1)
'=================================================================================================='
Public Declare Function AxaiHwGetBufferOverflowMode Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upFullMode As Long) As Long


'control method when the buffer is full in specified multiple input channels
'=================================================================================================='
' uFullMode    : NEW_DATA_KEEP(0)
'              : CURR_DATA_KEEP(1)
'=================================================================================================='
Public Declare Function AxaiHwSetMultiBufferOverflowMode Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal uFullMode As Long) As Long


'Set the upper limit and lower limit of buffer in specified input channel
Public Declare Function AxaiHwSetLimit Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lLowLimit As Long, ByVal lUpLimit As Long) As Long


'Verify the upper limit and lower limit of buffer in specified input channel
Public Declare Function AxaiHwGetLimit Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpLowLimit As Long, ByRef lpUpLimit As Long) As Long


'Set the upper limit and lower limit of buffer in multiple input channels
Public Declare Function AxaiHwSetMultiLimit Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal lLowLimit As Long, ByVal lUpLimit As Long) As Long


'Start A/D conversion using H/W timer in specified multiple channels
Public Declare Function AxaiHwStartMultiChannel Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal lBuffSize As Long) As Long


'Start A/D conversion using H/W timer in specified single channels
Public Declare Function AxaiHwStartSingleChannelAdc Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lBuffSize As Long) As Long


'Stop continuous signal A/D conversion used H/W timer.
Public Declare Function AxaiHwStopSingleChannelAdc Lib "AXL.dll" (ByVal lChannelNo As Long) As Long


'After starting of A/D conversion in specified multiple channels, manage filtering as much as specified and return into voltage
'==================================================================================================//
' lSize           : Number of input channels to use
' *lpChannelNo    : An array of channel numbers to use
' lFilterCount    : Number of data for filtering
' lBuffSize       : Number of buffers which are assigned to each channel
'==================================================================================================//
Public Declare Function AxaiHwStartMultiFilter Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal lFilterCount As Long, ByVal lBuffSize As Long) As Long


'Stop continuous signal A/D conversion used H/W timer
Public Declare Function AxaiHwStopMultiChannel Lib "AXL.dll" (ByVal lModuleNo As Long) As Long


'Inspect the numbers of data in memory buffer of specified input channel
Public Declare Function AxaiHwReadDataLength Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpDataLength As Long) As Long


'Read A/D conversion data used H/W timer in specified input channel by voltage value
Public Declare Function AxaiHwReadSampleVoltage Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpCount As Long, ByRef dpVolt As Double) As Long


'Read A/D conversion data used H/W timer in specified input channel by digit value
Public Declare Function AxaiHwReadSampleDigit Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpCount As Long, ByRef upDigit As Long) As Long


'========== API group of input module state check ===================================================================================
'Inspect if there is no data in memory buffer of specified input channel
'=================================================================================================='
' *upEmpty     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferEmpty Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upEmpty As Long) As Long

